--- a/practice-two/src/styles/layout/footer.css
+++ b/practice-two/src/styles/layout/footer.css
@@ -28,9 +28,11 @@
 
 .footer-socialbox {
     margin-top: 30px;
+    display: flex;
+    flex-direction: column-reverse;
 }
 
-.footer-social {
+.footer-social-list {
     width: 224px;
     display: flex;
     justify-content: space-between;
@@ -63,6 +65,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        flex-direction: row;
     }
 
     .footer-coppy {
